5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1791_1621.log
== TEST (2019-05-29 14:19:45) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))) .upper()
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(custo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:16) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))) .upper()
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:39) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))).upper()
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:06) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 3
    quant = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:22:43) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.15883
-- ERROR:
  File "/home/codebench/codes/1791/1621/main.py", line 3
    quant = array(eval(input()))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:45) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 3
    quant = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:47) 
-- CODE:
from numpy import*
v = array(eval(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 3
    quant = array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:20) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(nomes)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:55) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i = i + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:32) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:58) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	str(v[i]) = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 18
    str(v[i]) = quant[j] * custo
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:20) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	int(v[i]) = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 18
    int(v[i]) = quant[j] * custo
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:22) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	int(v[i]) = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.195986
-- ERROR:
  File "/home/codebench/codes/1791/1621/main.py", line 18
    int(v[i]) = quant[j] * custo
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:23) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	int(v[i]) = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 18
    int(v[i]) = quant[j] * custo
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:38) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.388903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 18, in <module>
    v[i] = quant[j] * custo
TypeError: 'str' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:41) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.598039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 18, in <module>
    v[i] = quant[j] * custo
TypeError: 'str' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:44) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
1.11809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 18, in <module>
    v[i] = quant[j] * custo
TypeError: 'str' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:44) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
1.1414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 18, in <module>
    v[i] = quant[j] * custo
TypeError: 'str' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:29:45) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):	
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
1.70444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 18, in <module>
    v[i] = quant[j] * custo
TypeError: 'str' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:50) 
-- CODE:
from numpy import*
v = input("nomes dos produtos:")
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:10) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:38) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:03) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:16) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.574593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 8, in <module>
    v[i] = quant[j] * custo 
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:17) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.394496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 8, in <module>
    v[i] = quant[j] * custo 
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:18) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:20) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.560295
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 8, in <module>
    v[i] = quant[j] * custo 
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:21) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
0.696265
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 8, in <module>
    v[i] = quant[j] * custo 
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:21) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
while(i < size(v)):
	v[i] = quant[j] * custo 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- EXECUTION TIME:
1.37638
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 8, in <module>
    v[i] = quant[j] * custo 
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:16) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
		elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
File "XXXX", line 25
    elif(v[i] == "FANTA"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:41) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	v[i] = quant[j] * custo
	i = i + 1
	j = j + 1
print(round(custo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:07) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:16) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
0.62905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:17) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
2.74194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:17) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
1.23749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:17) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.11722
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:18) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.31419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:19) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.43927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:26) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
2.70045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:26) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.93353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:27) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
2.50402
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:27) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
2.3162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:27) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.72189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:27) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
3.22874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:27) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
2.62889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:12:28) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
4.63324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:14:50) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
0.438577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:14:50) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
0.721022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:51) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
		i =i + 1
		j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:28) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:15:31) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
0.488522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:33) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:15:33) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- EXECUTION TIME:
0.531561
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:34) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:20) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(custo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:17:24) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(custo)
	
-- EXECUTION TIME:
0.38326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:17:26) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(custo)
	
-- EXECUTION TIME:
0.330161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:02) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(round(total,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:06) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(round(total,2))
	
-- EXECUTION TIME:
0.409027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:08) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a = 0
b = 0
c = 0
d = 0
e = 0
while(i < size(v)): 
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a = a + custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b = b + custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c = c+ custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d + custo	
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e = e + custo
	i =i + 1
	j = j + 1
	custo = a+b+c+d+e
	total = quant[j] * custo
print(round(total,2))
	
-- EXECUTION TIME:
0.380161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    if(v[i] == "ARROZ"):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:38) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 

while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i =i + 1
	j = j + 1
	
print(round(custo,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:40) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 

while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i =i + 1
	j = j + 1
	
print(round(custo,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:21:42) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 

while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i =i + 1
	j = j + 1
	
print(round(custo,2))
	
-- EXECUTION TIME:
0.344697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 9, in <module>
    quant[j] = quant[j] * v[i]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:42) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 

while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i =i + 1
	j = j + 1
	
print(round(custo,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:21:43) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 

while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
	elif(v[i] == "BIS"):
		custo = custo + 1.80
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
	i =i + 1
	j = j + 1
	
print(round(custo,2))
	
-- EXECUTION TIME:
0.822531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 9, in <module>
    quant[j] = quant[j] * v[i]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:09) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a=0
b=0
c=0
d=0
e=0
while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a=a+custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b= b+custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c= c+custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d+custo
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e=e+custo
	i =i + 1
	j = j + 1
	total = a+b+c+d+e
print(round(total ,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:24:13) 
-- CODE:
from numpy import*
v = array(input("nomes dos produtos:"))
quant = array(eval(input("quantidades de cada:")))
i = 0
j = 0
custo = 0 
a=0
b=0
c=0
d=0
e=0
while(i < size(v)): 
	quant[j] = quant[j] * v[i]
	if(v[i] == "ARROZ"):
		custo = custo + 1.25
		a=a+custo
	elif(v[i] == "FEIJAO"):
		custo = custo + 2.60
		b= b+custo
	elif(v[i] == "BIS"):
		custo = custo + 1.80
		c= c+custo
	elif(v[i] == "MIOJO"):
		custo = custo + 0.85
		d = d+custo
	elif(v[i] == "FANTA"):
		custo = custo + 3.20
		e=e+custo
	i =i + 1
	j = j + 1
	total = a+b+c+d+e
print(round(total ,2))
	
-- EXECUTION TIME:
0.525126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 13, in <module>
    quant[j] = quant[j] * v[i]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
